[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Title Screen.gd" type="Script" id=1]
[ext_resource path="res://Art/DY8JzUNVMAAyPW4 - Copy.jpg" type="Texture" id=2]
[ext_resource path="res://Art/font/Montserrat-Medium.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.27451 )

[node name="Title Screen" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.483824, 0.378781 )
texture = ExtResource( 2 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 59.2436
margin_top = 213.025
margin_right = 445.244
margin_bottom = 393.025
rect_scale = Vector2( 0.87, 1 )
size_flags_horizontal = 4

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = -5.21835
margin_top = 165.832
margin_right = 355.782
margin_bottom = 346.832

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = -19.5378
margin_top = -11.3445
margin_right = 366.462
margin_bottom = 100.655

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_right = 385.0

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 4.0
margin_right = 385.0
margin_bottom = 23.0
custom_constants/separation = 30
alignment = 1

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 76.0
margin_right = 146.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Start Game"

[node name="Button2" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 176.0
margin_right = 230.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "Controls"

[node name="Button3" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 260.0
margin_right = 308.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Credits"

[node name="Label" type="Label" parent="."]
margin_left = 17.0
margin_top = 5.0
margin_right = 347.0
margin_bottom = 155.0
theme = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "WhiteAv
SadBoi
100piws
MrGippy
pooya13
bakedjizz"
align = 1
valign = 1

[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer2/Button3" to="." method="_on_Button3_pressed"]
